# Agentic-RAG

./: lol.py  pyproject.toml
rag-app/: .env.example  README.md  questions.json  requirements.txt
rag-app/src/: chunk.py  cli.py  config.py  db.py  embed_index.py  generate.py  prompts.py  retrieve.py  text_extract.py  utils.py  web.py  worker.py
rag-app/templates/: index.html
tmp/lancedb/recipes.lance/_transactions/: 0-b2f02b38-d97c-4fa5-9839-c87d025ef155.txn  1-a4d9e9b8-9452-49de-af80-c9d776b1b7b1.txn
tmp/lancedb/recipes.lance/_versions/: 1.manifest  2.manifest
